--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/redsundigital/harbor-media-photobooth#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "nodemailer": "^6.4.11",
     "twilio": "^3.49.1"
   }
