--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
     "twilio": "^3.49.1"
   }
