--- a/package.json
+++ b/package.json
@@ -1,37 +1,22 @@
 {
   "name": "harbor-media-photobooth",
-  "version": "0.1.0",
-  "description": "Photobooth web app.",
-  "main": "server.js",
-  "engines": {
-    "node": "12.x"
-  },
+  "version": "0.0.1",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start": "cd server && npm run start",
+    "heroku-postbuild": "cd client && npm i && npm run build",
+    "server:watch": "cd server && npm run watch",
+    "client:start": "cd client && npm run start"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/redsundigital/harbor-media-photobooth.git"
   },
   "keywords": [],
-  "author": {
-    "name": "Jason Michael",
-    "email": "jason@redsundigitalkc.com",
-    "url": "http://redsundigitalkc.com"
-  },
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/redsundigital/harbor-media-photobooth/issues"
   },
-  "homepage": "https://github.com/redsundigital/harbor-media-photobooth#readme",
-  "dependencies": {
-    "axios": "^0.20.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "form-data": "^3.0.0",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.4.11",
-    "twilio": "^3.49.1"
-  }
+  "homepage": "https://github.com/redsundigital/harbor-media-photobooth#readme"
 }
