--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-measure": "^2.5.2",
     "react-qr-svg": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
